Added titles of some pages

--- a/src/what-is-the-homeguildnet.html
+++ b/src/what-is-the-homeguildnet.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./styles/core.css" />
 		<link rel="stylesheet" media="screen" href="./styles/display.css" />
-		<title>HOMEGUILDNET</title>
+		<title>HOMEGUILDNETとは | HOMEGUILDNET</title>
 	</head>
 	<body>
 		<header>
